tdf#156084: Fix PDF export of bitmap color fonts

A regression from the commit below caused the resources dictionary of
the Type 3 font to be omitted making the images inaccessible:

commit 845fbfcce9091e541bab657163b026aad8648261
Author: Khaled Hosny <khaled@libreoffice.org>
Date:   Thu Jun 15 06:27:38 2023 +0300

    Don’t add empty Fonts dictionary to Type 3 font resources

Change-Id: I479ca328bd1b1228ba722678d3d9686c8456b350
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153780
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>
(cherry picked from commit f49a70942ab1f9c20a3605b13f772526d06cf9a6)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153761